added prevalence threshold for ref signatures included in signature reconstruction

--- a/pcgrr/inst/templates/pcgr_rmarkdown/report_query_settings.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/report_query_settings.Rmd
@@ -56,6 +56,7 @@ The report is generated with _[PCGR](https://github.com/sigven/pcgr)_ version `r
   * Minimum number of mutations required: __`r pcg_report[['metadata']][['config']][['msigs']][['mutation_limit']]`__
   * All reference signatures: <b> __`r pcg_report[['metadata']][['config']][['msigs']][['all_reference_signatures']]`__ </b>
   * Inclusion of artefact signatures: <b> __`r pcg_report[['metadata']][['config']][['msigs']][['include_artefact_signatures']]`__ </b>
+  * Minimum tumor-type prevalence (percent) of reference signatures used for refitting: <b> __`r pcg_report[['metadata']][['config']][['msigs']][['prevalence_reference_signatures']]`__</b>
 * Report theme (Bootstrap): __`r pcg_report[['metadata']][['config']][['visual']][['report_theme']]`__
 * Variant Effect Predictor (VEP) settings:
   * Transcript set: __`r transcript_set_gencode`__
