--- a/pcgrr/vignettes/running.Rmd
+++ b/pcgrr/vignettes/running.Rmd
@@ -36,7 +36,8 @@ If the user has provided a [panel-of-normals VCF file](input.html#panel-of-norma
 
 <hr>
 
-__IMPORTANT NOTE__: Note that a number of the analyses available in PCGR is not particularly well-suited for tumor-only input, e.g. mutational signature analysis and MSI status prediction.
+__IMPORTANT NOTE 1__: Note that a number of the analyses available in PCGR is not particularly well-suited for tumor-only input, e.g. mutational signature analysis and MSI status prediction.
+__IMPORTANT NOTE 2__: If you run PCGR on tumor-only WGS assays, we strongly recommend that you pre-filter your VCF against the exome, since we have frequently encountered that the large unfiltered variant set from such assays will cause a crash in PCGR. See also [this issue](https://github.com/sigven/pcgr/issues/178).
 
 ### Sample properties
 
@@ -120,6 +121,7 @@ Mutational signature options:
   --min_mutations_signatures MIN_MUTATIONS_SIGNATURES - Minimum number of SNVs required for reconstruction of mutational signatures (SBS) by MutationalPatterns (default: 200, minimum n = 100)
   --all_reference_signatures - Use all reference mutational signatures (SBS, n = 67) in signature reconstruction rather than only those already attributed to the tumor type (default: False)
   --include_artefact_signatures - Include sequencing artefacts in the collection of reference signatures (default: False
+  --prevalence_reference_signatures {0,2,5,10,15,20} - Minimum tumor-type prevalence (in percent) of reference signatures to be included in refitting procedure (default: 5)
 
 Tumor-only options:
   --tumor_only          - Input VCF comes from tumor-only sequencing, calls will be filtered for variants of germline origin, (default: False)
