--- a/pcgrr/vignettes/faq.Rmd
+++ b/pcgrr/vignettes/faq.Rmd
@@ -7,7 +7,7 @@ Frequently asked questions regarding PCGR usage and functionality:
 
 __1. I do not see any data related to allelic depth/support in my report. I thought that PCGR can grab this information automatically from my VCF?__
 
-_Answer: VCF variant genotype data (i.e. AD/DP) is something that you as a user need to specify explicitly when running PCGR. In our experience, there is currently no uniform way that variant callers format these types of data (allelic fraction/depth, tumor/normal) in the VCF, and this makes it very challenging for PCGR to automatically grab this information from any VCF. Please take a careful look at the example VCF files (`examples` folder) that comes with PCGR for how PCGR expects this information to be formatted, and make sure your VCF is formatted accordingly. There is also an in-depth explanation on the matter [described here](articles/input.html#ormatting-of-allelic-depthsupport-dpad)_
+_Answer: VCF variant genotype data (i.e. AD/DP) is something that you as a user need to specify explicitly when running PCGR. In our experience, there is currently no uniform way that variant callers format these types of data (allelic fraction/depth, tumor/normal) in the VCF, and this makes it very challenging for PCGR to automatically grab this information from any VCF. Please take a careful look at the example VCF files (`examples` folder) that comes with PCGR for how PCGR expects this information to be formatted, and make sure your VCF is formatted accordingly. There is also an in-depth explanation on the matter [described here](input.html#formatting-of-allelic-depthsupport-dpad)_
 
 __2. Is it possible to utilize PCGR for analysis of multiple samples?__
 
@@ -39,11 +39,11 @@ _Answer: This is currently not supported as input for PCGR, but is something we 
 
 __6. I am surprised to see a particular gene being located in TIER 3 for my sample, since I know that this gene is of potential clinical significance in the tumor type I am investigating?__
 
-_Answer: PCGR classifies variants into tiers of significance through an implementation of_  [published guidelines by ACMG/AMP](https://pcgr.readthedocs.io/en/latest/tier_systems.html). _No manual efforts for individual tumor types are conducted beyond this rule-based scheme. The users need to keep this in mind when interpreting the tier contents of the report._
+_Answer: PCGR classifies variants into tiers of significance through an implementation of_  [published guidelines by ACMG/AMP](variant_classification.html). _No manual efforts for individual tumor types are conducted beyond this rule-based scheme. The users need to keep this in mind when interpreting the tier contents of the report._
 
 __7. Is it possible to see all the invididual cancer subtypes that belong to each of the 30 different tumor sites?__
 
-_Answer: Yes, see_ [oncotree_ontology_xref.tsv](https://raw.githubusercontent.com/sigven/pcgr/master/oncotree_ontology_xref.tsv)
+_Answer: Yes, see_ [an overview of phenotypes associated with primary tumor sites](primary_tumor_sites.html)
 
 __8. Is there any plans to incorporate data from__ [OncoKB](https://www.oncokb.org) __in PCGR?__
 
