--- a/pcgrr/vignettes/primary_tumor_sites.Rmd
+++ b/pcgrr/vignettes/primary_tumor_sites.Rmd
@@ -8,9 +8,17 @@ require(DT)
 require(readr)
 ```
 
+PCGR integrates a variety of different datasets, that typically use different notations or ontologies when
+it comes to diseases or phenotypes. We have cross-referenced a variety of ontologies (DiseaseOntology, EFO, OncoTree, UMLS) in use in the oncology domain, and organized all the various tumor subtypes into 30 different main tumor sites (see also https://github.com/sigven/oncoPhenoMap). 
+
+Below you can browse all the various phenotype terms that are associated with each of the primary sites. This as a guide to choose the primary tumor type when running PCGR for a given sample (option `--tumor_site`).
+
+<br><br>
+
 ```{r read_table, echo=FALSE, message=FALSE, warning=FALSE}
 tab <- system.file("extdata/oncotree_phenotypes.tsv.gz", package = "pcgrr")
 readr::read_tsv(tab, col_types = readr::cols(.default = "character")) |>
+  dplyr::arrange(primary_site) %>%
   DT::datatable(filter = list(position = "top", clear = FALSE, plain = TRUE),
                 class = "cell-border display compact",
                 rownames = FALSE, extensions = c("Buttons", "KeyTable"),
