--- a/pcgrr/vignettes/installation.Rmd
+++ b/pcgrr/vignettes/installation.Rmd
@@ -5,9 +5,11 @@ output: rmarkdown::html_document
 
 ## Quick Installation
 
-If you know what [conda](https://docs.conda.io/projects/conda/en/latest/user-guide/getting-started.html)
-is, you only need to run the following commands in order to install the PCGR
-software requirements:
+### Conda
+
+- If you know what [conda](https://docs.conda.io/projects/conda/en/latest/user-guide/getting-started.html)
+  is, you only need to run the following commands in order to install the PCGR
+  software requirements:
 
 ```bash
 PCGR_VERSION="1.0.3"
@@ -27,7 +29,14 @@ conda activate ./pcgr
 pcgr --version
 ```
 
-For downloading the data bundle, see [STEP 1](#step1) further below.
+### Data
+
+- For downloading the data bundle, see [STEP 1](#step1) further below.
+
+### Docker
+
+- If you know what [Docker](https://www.docker.com/) is, instead of using the above conda method
+  you can jump straight to the [PCGR Docker setup](#dockersetup) section.
 
 ## Detailed Installation
 
@@ -206,30 +215,13 @@ versions of Docker/Windows do not work with PCGR (an example being [mounting of 
 - Pull the [PCGR Docker image](https://hub.docker.com/r/sigven/pcgr/tags) from
   DockerHub (approx 5.7Gb) with: `docker pull sigven/pcgr:vX.X.X`
 
-#### c) Run PCGR Docker Container directly (_recommended_) or indirectly
+#### c) Run PCGR Docker Container
 
-This next step depends on how familiar you are with working with Docker volumes
-(<https://docs.docker.com/storage/volumes/>).
+If you are familiar with working with Docker volumes (<https://docs.docker.com/storage/volumes/>)
+you can run PCGR using Docker instead of conda using the `-v <host>:<container>` Docker option.
+You'll need to map your PCGR inputs to Docker container paths.
 
-- If you know how to use the `-v <host>:<container>` Docker option, you can
-  use the PCGR Docker image directly, which would not involve
-  having to set up a Python environment.
-  Jump to the [PCGR Docker direct setup](#dockerdirectsetup) for more details.
-- Alternatively, you can allow PCGR itself to handle the Docker volume setup
-  intricacies, but this requires a Python environment setup (which can be a bit
-  cumbersome if you're not too familiar with conda or virtualenv).
-  Jump to the [PCGR Docker indirect setup](#dockerindirectsetup) for more details.
-
-<a name="dockerdirectsetup"></a>
-
-##### Directly
-
-<details>
-
-<summary>CLICK ME!</summary>
-
-You'll need to map your PCGR inputs to Docker container paths. For example, say
-you have the input VCF `sampleX.vcf.gz` stored in the
+For example, say you have the input VCF `sampleX.vcf.gz` stored in the
 directory `/Users/you/project1`. You would need to supply Docker with a
 `--volume` (or `-v`) option mapping the directory of that VCF with
 a directory inside the Docker container, e.g. `/home/input_vcf_dir`.
@@ -251,71 +243,8 @@ docker container run -it --rm \
       --genome_assembly "grch38" \
       --sample_id "SampleB" \
       --assay "WGS" \
-      --vcf2maf \
-      --no_docker
+      --vcf2maf
 ```
 
-- Note the `--no_docker` option in the above command. Since you're running that
-  command _directly_ inside the container, you need to use that option to bypass
-  the _indirect_ Docker PCGR run.
-- Also note the path mappings. You're using the _container_ paths in the
+- Note the path mappings. You're using the _container_ paths in the
   command, not the _host_ (your machine's) paths.
-
-</details>
-
-<a name="dockerindirectsetup"></a>
-
-##### Indirectly (not recommended)
-
-<details>
-
-<summary>CLICK ME!</summary>
-
-Install the PCGR Python component on your local machine. Only requirement is
-Python > 3.6. We would _strongly_ advise to install it in a virtual Python
-environment with conda (or virtualenv) (read the previous sections for how to
-install conda). Or else it will (probably) use your
-system's default Python and you'll end up in a situation like <https://xkcd.com/1987/>.
-Here's an example using conda/mamba, with only Python 3.7 as a dependency:
-
-```bash
-(base) $ mamba create -n pcgr_docker_env -c conda-forge python=3.7
-(base) $ conda activate pcgr_docker_env
-
-(pcgr_docker_env) $ which python
-/Users/you/miniconda3/envs/pcgr_docker_env/bin/python
-(pcgr_docker_env) $ cd /Users/you/dir4/PCGR
-
-(pcgr_docker_env) $ pip install -e .
-Obtaining file:///Users/you/dir4/PCGR
-  Preparing metadata (setup.py) ... done
-Installing collected packages: pcgr
-  Running setup.py develop for pcgr
-Successfully installed pcgr-X.X.X
-
-(pcgr_docker_env) $ which pcgr
-/Users/you/miniconda3/envs/pcgr_docker/bin/pcgr
-(pcgr_docker_env) $ pcgr --version
-pcgr X.X.X
-```
-
-You should now be all set up to run PCGR from within that `pcgr_docker_env`
-conda environment! Here's an example command:
-
-```bash
-(pcgr_docker_env) $ pcgr \
-  --input_vcf "/Users/you/dir1/tumor_sample.BRCA.vcf.gz" \
-  --pcgr_dir "/Users/you/dir2/data" \
-  --output_dir "/Users/you/dir3/pcgr_outputs" \
-  --genome_assembly "grch38" \
-  --sample_id "SampleB" \
-  --assay "WGS"
-```
-
-- Note that we do not specify the `--no_docker` option. PCGR will
-  automatically look for the more recent Docker container on your
-  machine, and then run the above command inside it _indirectly_.
-- Also note the path mappings. You're using the actual _host_ (your machine's)
-  paths, not the _container_ paths.
-
-</details>
